1. Метод .of [#326596]